@@ -1,6 +1,8 @@
 HEAD
 	+ Bugfix, using standard default smtp banner to avoid breaking
 	banner checks. Thanks to ivo@housesbg.com for pointing this
+	+ Now event's mail dispatcher uses configured mailname instead of
+	non-qualified hostname
 1.4.2
 	+ Bugfix, mail to local accounts is delivered correctly, changed
 	some parameters to take in account myorigin
